--- a/moban/index.html
+++ b/moban/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Transgender</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -54,7 +50,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
+									<span class="date">Projet réalisé en 2023</span>
 									<h2>Présentation</h2>
 									<p>Ce projet vise à explorer le mot Transgender dans les webs ! <br>Il se concentre sur les quatre langues : <br>français (transgenre), chinois (跨性別), anglais (transgender) et japonais (トランスジェンダー).</p>
 								</header>
@@ -84,18 +80,16 @@
 								</p>
 							</section>
 							<section style="text-align: center"><h2>qui somme nous?</h2></section>
-
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<span class="date">Étudiant Paris 3</span>
+										<h2><a href="https://github.com/JinyuCong">Cong Jinyu</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/JinyuCong" class="image fit"><img src="images/pic04.jpg" alt=""/></a>
+									<p>Un geek passionné d'informatique, mes hobbies incluent jouer à des jeux vidéo et fréquenter la salle de sport. Après trois années d'études en linguistique au niveau universitaire, je ai découvert ma compétence particulière en informatique.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/JinyuCong" class="button">Mon github</a></li>
 									</ul>
 								</article>
 								<article>
