--- a/moban/index.html
+++ b/moban/index.html
@@ -83,7 +83,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">Étudiant Paris 3</span>
+										<span class="date">Étudiant Sorbonne Nouvelle</span>
 										<h2><a href="https://github.com/JinyuCong">Cong Jinyu</h2>
 									</header>
 									<a href="https://github.com/JinyuCong" class="image fit"><img src="images/pic04.jpg" alt=""/></a>
