ajout lien nuage.html

--- a/moban/index.html
+++ b/moban/index.html
@@ -40,7 +40,7 @@
 							<li><a href="#detail">Présentation</a></li>
 							<li><a href="#">Tableaux</a></li>
 							<li><a href="#">Itrameur</a></li>
-							<li><a href="#">Nuages</a></li>
+							<li><a href="Nuage.html">Nuages</a></li>
 							<li><a href="#">Scripts</a></li>
 						</ul>
 						<ul class="icons">
