--- a/moban/index.html
+++ b/moban/index.html
@@ -7,6 +7,19 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+		<!--标题转换效果-->
+		<style>
+			@keyframes fadeInOut {
+				0% { opacity: 0; }
+				50% { opacity: 1; }
+				100% { opacity: 0; }
+			}
+	
+			h1 {
+				animation: fadeInOut 6s infinite; /* 4s 是动画持续时间，infinite 表示无限循环 */
+			}
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -17,7 +30,7 @@
 					<div id="intro">
 						
 						<p>PROGRAMMATION ET PROJET ENCADRÉ 1</p>
-						<h1>TRANSGENRE</h1>
+						<h1 id="fadingTitle">TRANSGENRE</h1>
 						<p>RÉALISÉ PAR CONG JINYU, SUN CHENZHI, CHEN XINLEI, WEN YU-CHIEH</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -151,6 +164,18 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+			<script>
+				// 使用 JavaScript 控制标题的淡入淡出效果
+				const titles = ["TRANSGENRE", "TRANSGENDER", "跨性别", "トランスジェンダー"];
+				let titleIndex = 0;
+		
+				const fadingTitle = document.getElementById('fadingTitle');
+		
+				fadingTitle.addEventListener('animationiteration', () => {
+					// 当动画播放完成后，更改标题内容
+					fadingTitle.textContent = titles[titleIndex];
+					titleIndex = (titleIndex + 1) % titles.length;
+				});
+			</script>
 	</body>
 </html>
