--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<li><a href="#detail">Présentation</a></li>
 							<li><a href="#">Tableaux</a></li>
 							<li><a href="#">Itrameur</a></li>
-							<li><a href="Nuage.html">Nuages</a></li>
+							<li><a href="nuages.html">Nuages</a></li>
 							<li><a href="#">Scripts</a></li>
 						</ul>
 						<ul class="icons">
