--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 			<script src="assets/js/main.js"></script>
 			<script>
 				// 使用 JavaScript 控制标题的淡入淡出效果
-				const titles = ["TRANSGENRE", "TRANSGENDER", "跨性别", "トランスジェンダー"];
+				const titles = ["TRANSGENDER", "跨性别", "トランスジェンダー"];
 				let titleIndex = 0;
 		
 				const fadingTitle = document.getElementById('fadingTitle');
