--- a/tableaux.html
+++ b/tableaux.html
@@ -50,7 +50,7 @@
 						<li class="active"><a href="#">Tableaux</a></li>
 						<li><a href="#">Itrameur</a></li>
 						<li><a href="nuages.html">Nuages</a></li>
-						<li><a href="#">Scripts</a></li>
+						<li><a href="scripts.html">Scripts</a></li>
 					</ul>
 					<ul class="icons">
 						<li><a href="https://github.com/Chenzhi23/PPE1-Groupe" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
