--- a/index.html
+++ b/index.html
@@ -107,14 +107,13 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<span class="date">Étudiant INALCO</span>
+										<h2><a href="https://github.com/yuchieh0621mumu">WEN Yu-Chieh</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/yuchieh0621mumu" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<p>En tant que passionné de langues et geek de linguistique, je veux apprendre toutes les langues du monde sans utiliser Google Traduction</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/yuchieh0621mumu" class="button">Mon github</a></li>
 									</ul>
 								</article>
 								<article>
