--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
+										<span class="date">Étudiant Paris 3</span>
+										<h2><a href="https://github.com/Chenzhi23">SUN Chenzhi</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/SUN_Chenzhi.jpg" alt="" /></a>
+									<p>Un beau gosse chinois, étudiant en Traitement Automatique des Langues (TAL) et en Linguistique (LLTS) à Paris 3. Passionné par le basketball, le cinéma, les voyages et la photographie, j’ai également un faible pour les chiens et les chats. :)</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/Chenzhi23" class="button">Mon github</a></li>
+										<li><a href="https://www.instagram.com/chenzhi_sun/" class="button">Mon instagram</Ins></a></li>
 									</ul>
 								</article>
 								<article>
