--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
+										<span class="date">Étudiant INALCO</span>
+										<h2><a href="https://github.com/chenxinlei1">CHEN XINLEI<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/CHEN_xinlei.png" alt="" /></a>
+									<p>Étudiante en Traitement Automatique des Langues (TAL) à l'INALCO. Je suis fascinée par la photographie, surtout quand il s'agit de capturer les moments uniques des endroits que je visite.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/chenxinlei1" class="button">Mon github</a></li>
 									</ul>
 								</article>
 							</section>
