--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<li class="active"><a href="index.html">Page d'accueil</a></li>
 							<li><a href="#detail">Présentation</a></li>
 							<li><a href="tableaux.html">Tableaux</a></li>
-							<li><a href="#">Itrameur</a></li>
+							<li><a href="itrameur.html">Itrameur</a></li>
 							<li><a href="nuages.html">Nuages</a></li>
 							<li><a href="scripts.html">Scripts</a></li>
 						</ul>
