--- a/itrameur.html
+++ b/itrameur.html
@@ -111,7 +111,7 @@
 
 									Le corpus anglais sur les "transgenres" semble dépeindre un discours actif, semblable à un mouvement. Il comprend un lexique politique, avec des termes tels que "generation" et "gap", qui suggèrent des différences ou des clivages générationnels dans la perception et l'acceptation des personnes transgenres. L'absence de langage péjoratif dans les termes les plus fréquents indique un discours qui accepte mieux les identités transgenres ou, du moins, qui ne les critique pas ouvertement.</p>
 
-									<p><span class="image left"><img src="images/itrameur_ch.jpg" alt="" /></span>L'analyse textométrique iTrameur du terme "跨性別" (transgenre) dans un corpus en langue chinoise fournit un paysage détaillé de la façon dont le terme est intégré dans le discours au sein des médias chinois.
+									<p><span class="image left"><img src="images/itrameur_ch.png" alt="" /></span>L'analyse textométrique iTrameur du terme "跨性別" (transgenre) dans un corpus en langue chinoise fournit un paysage détaillé de la façon dont le terme est intégré dans le discours au sein des médias chinois.
 
 									Le graphique du réseau montre "跨性別" au centre, entouré d'un large éventail de termes qui indiquent une conversation diversifiée et complexe autour des questions de transgenre. Les termes vont de ceux liés à l'identité personnelle, tels que "性别" (genre) et "女性" (femme), à des concepts sociétaux plus larges, tels que "人权" (droits de l'homme) et "社会" (société), ce qui suggère que la discussion englobe à la fois des dimensions individuelles et sociétales.</p>
 
@@ -120,11 +120,11 @@
 
 									En résumé, l'analyse du corpus chinois de "跨性別"(transgenre) révèle une discussion multidimensionnelle qui aborde diverses facettes de la vie et des droits des transgenres. Le discours reflète des considérations à la fois personnelles et sociales, indiquant une conversation dynamique autour du sujet des identités transgenres dans le monde de langue chinoise.</p>
 
-									<p><span class="image right"><img src="images/irameur_jp.png" alt="" /></span>L'analyse textométrique iTrameur du terme "トランスジェンダー" (transgenre) dans un corpus en langue japonaise offre une vue concise de l'utilisation du terme et des associations contextuelles dans les médias japonais.
+									<p><span class="image right"><img src="images/itrameur_jp.png" alt="" /></span>L'analyse textométrique iTrameur du terme "トランスジェンダー" (transgenre) dans un corpus en langue japonaise offre une vue concise de l'utilisation du terme et des associations contextuelles dans les médias japonais.
 
 									Le graphique du réseau représente "トランスジェンダー" comme nœud central, avec des connexions à un nombre nettement inférieur de termes par rapport aux analyses anglaise et française, ce qui suggère un discours plus ciblé. Le terme "性同一性障害" (trouble de l'identité de genre) est lié, ce qui indique que les discussions sur les questions de transgenre sont potentiellement encadrées dans le contexte d'un discours médical ou psychologique. </p>
 
-									<p><span class="image left"><img src="images/itrameur_jp_table.jpg" alt="" /></span>
+									<p><span class="image left"><img src="images/itrameur_jp_table.png" alt="" /></span>
 
 									Les données du tableau confirment la forte association entre "トランスジェンダー" et "性同一性障害", avec un indice de spécificité (IndSP) significatif pour ce dernier terme. La prédominance de ce terme peut refléter la médicalisation des identités transgenres dans le contexte japonais, une perspective qui catégorise les expériences transgenres dans le domaine du diagnostic médical.
 
