--- a/nuages.html
+++ b/nuages.html
@@ -48,7 +48,7 @@
 						<li><a href="index.html">Page d'accueil</a></li>
 						<li><a href="index.html#detail">Présentation</a></li>
 						<li><a href="tableaux.html">Tableaux</a></li>
-						<li><a href="#">Itrameur</a></li>
+						<li><a href="itrameur.html">Itrameur</a></li>
 						<li class="active"><a href="#">Nuages</a></li>
 						<li><a href="scripts.html">Scripts</a></li>
 					</ul>
