--- a/itrameur.html
+++ b/itrameur.html
@@ -48,8 +48,8 @@
 						<li><a href="index.html">Page d'accueil</a></li>
 						<li><a href="index.html#detail">Présentation</a></li>
 						<li><a href="tableaux.html">Tableaux</a></li>
-						<li><a href="itrameur.html">Itrameur</a></li>
-						<li class="active"><a href="#">Nuages</a></li>
+						<li class="active"><a href="itrameur.html">Itrameur</a></li>
+						<li><a href="#">Nuages</a></li>
 						<li><a href="scripts.html">Scripts</a></li>
 					</ul>
 					<ul class="icons">
