mod navbar itrameur

--- a/itrameur.html
+++ b/itrameur.html
@@ -49,7 +49,7 @@
 						<li><a href="index.html#detail">Présentation</a></li>
 						<li><a href="tableaux.html">Tableaux</a></li>
 						<li class="active"><a href="itrameur.html">Itrameur</a></li>
-						<li><a href="#">Nuages</a></li>
+						<li><a href="nuages.html">Nuages</a></li>
 						<li><a href="scripts.html">Scripts</a></li>
 					</ul>
 					<ul class="icons">
